# rust-music-player

./: .gitignore  Cargo.toml  README.md  requirements.txt
src/: nannou_visualizer.rs  shader.wgsl
