[package]
name = "fractal-explorer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wgpu-fractal"
path = "src/main.rs"

[[bin]]
name = "simple-fractal"
path = "src/simple_mandelbrot.rs"

[[bin]]
name = "kaleidoscope"
path = "src/kaleidoscope.rs"

[[bin]]
name = "rainbow-squiggle"
path = "src/rainbow_squiggle.rs"

[[bin]]
name = "nannou-visualizer"
path = "src/nannou_visualizer.rs"

[dependencies]
winit = "0.26"
wgpu = "0.11"
pollster = "0.3"
bytemuck = { version = "1.13", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
minifb = "0.25"
rodio = "0.17"
spectrum-analyzer = "1.4"
nannou = "0.18"
nannou_audio = "0.18"
rustfft = "6.1"
derive_more = "0.99"
cpal = "0.15.2"
ringbuf = "0.2.8"
id3 = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"